User Profile Put the location Id's endpoint developed. new Location Proto Service developed for this reason.